--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@fortawesome/fontawesome-free": "^6.3.0",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "ngx-bootstrap": "^10.2.0",
     "ngx-currency": "^3.0.0",
     "ngx-mask": "^15.1.0",
+    "ngx-owl-carousel-o": "^15.0.0",
     "ngx-select-ex": "^8.0.1",
+    "ngx-slick-carousel": "^15.0.0",
     "ngx-toastr": "^16.1.0",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
